[package]
name = "mobc-boltrs"
authors = ["Jeffrey Howard <jhoward@alum.mit.edu>"]
categories = ["database-interfaces"]
description = "A bolt-client adapter for the mobc connection pool"
keywords = ["neo4j"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/maldrake/mobc-boltrs"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
bolt-client = { version = "0.8.0", features = ["tokio-stream"] }
bolt-proto = "0.9.0"
tokio = { version = "0.2.22", features = ["dns", "io-util"] }
tokio-util = {version = "0.3.1", features = ["compat"] }
mobc = "0.5.11"

[dev-dependencies]
futures-util = { version = "0.3.5", default-features = false, features = ["alloc"] }
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }
