[package]
name = "mobc-boltrs"
authors = ["Jeffrey Howard <jhoward@alum.mit.edu>"]
categories = ["database-interfaces"]
description = "A bolt-client adapter for the mobc connection pool"
keywords = ["neo4j"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/maldrake/mobc-boltrs"
version = "0.2.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
bolt-client = { version = "0.9.1", features = ["tokio-stream"] }
bolt-proto = "0.10.0"
tokio = { version = "1.4.0", features = ["net", "io-util"] }
tokio-util = {version = "0.6.5", features = ["compat"] }
mobc = "0.7.2"

[dev-dependencies]
futures-util = { version = "0.3.13", default-features = false, features = ["alloc"] }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
